# trend-spotter

./: .env.example  .env.production.template  .flake8  .gitignore  .isort.cfg  DEPLOYMENT.md  EMAIL_AGENT_IMPLEMENTATION_SUMMARY.md  EMAIL_SETUP_COMPLETE.md  GITHUB_SECRETS_SETUP.md  MULTI_AGENT_SYSTEM.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  README_OAUTH2.md  VERTEX_AI_STATUS.md  __init__.py  agent.py  auth_middleware.py  authenticated_server.py  deploy.sh  email_config.md  prompt.py  pyproject.toml  requirements.txt  setup_email_env.sh  setup_reddit_api.py  simple_test_agent.py  start_server.py  start_web.sh  test_agent_direct.py  test_agent_direct_simple.py  test_agent_functionality.py  test_credentials.py  test_final_vertex_ai.py  test_model_access.py  test_vertex_ai.py  user_context_middleware.py  verify_production_setup.py
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  code-quality.yml  deploy-adk.yml
documentation/: EMAIL_AGENT_IMPLEMENTATION_SUMMARY.md  GITHUB_SECRETS_SETUP.md  GOOGLE_OAUTH2_SETUP.md  README.md  USER_EMAIL_INTEGRATION.md  multi_agent_system.md
tests/: test_integration.py  test_unit.py
tests/agents/: test_agent_direct.py  test_agent_functionality.py
tests/auth/: test_oauth2_auth.py
tests/credentials/: test_credentials.py
tests/email/: test_email_agent.py
tests/models/: test_final_vertex_ai.py  test_model_access.py  test_vertex_ai.py
trend_spotter/: __init__.py  agent.py  prompt.py  tools.py
trend_spotter/sub_agents/: __init__.py  email_agent.py  google_search_agent.py  reddit_agent.py
